tests/error/inout_errors/override_after_call.err
Error: Drop violation (at $FILE:11:9)
   | 
 9 | 
10 | @guppy
11 | def test(q1: qubit @owned, q2: qubit @owned) -> tuple[qubit, qubit]:
   |          ^^^^^^^^^^^^^^^^ Variable `q1` with non-droppable type `qubit` is leaked

Help: Make sure that `q1` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
